welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while(fini=false){
          ^BDRBuggle:5: error: not found: value litmessage
		if (litmessage()=="R"){
                    ^BDRBuggle:9: error: not found: value litmessage
		else if (litmessage()=="L"){
                         ^BDRBuggle:13: error: not found: value litmessage
		else if (litmessage()=="I"){
                         ^BDRBuggle:18: error: not found: value litmessage
		else if (litmessage()=="A"){
                         ^BDRBuggle:21: error: not found: value litmessage
		else if (litmessage()=="B"){
                         ^BDRBuggle:25: error: not found: value litmessage
		else if (litmessage()=="C"){
                         ^BDRBuggle:30: error: not found: value litmessage
		else if (litmessage()=="X"){
                         ^BDRBuggle:33: error: not found: value litmessage
		else if (litmessage()=="Y"){
                         ^BDRBuggle:37: error: not found: value litmessage
		else if (litmessage()=="Z"){
                         ^